Sorting and Language selection filters added

--- a/src/app/Components/grid-view/grid-view.component.html
+++ b/src/app/Components/grid-view/grid-view.component.html
@@ -1,7 +1,8 @@
 <ng-container
     *ngIf="{query: query$ | async} as data"
+    class="container mx-auto"
   >
-    <ul *ngIf="data.query">
+    <ul *ngIf="data.query" class="m-8">
       <cdk-virtual-scroll-viewport
         role="presentation"
         scrollWindow
@@ -9,23 +10,23 @@
         (scrolledIndexChange)="onScroll(data.query.nextPage)"
         class="search-results__viewport"
       >
-        <li>
+        <li class="grid">
           <table>
-            <tr class="gri">
+            <tr class="">
               <th>Name</th>
               <th>Description</th>
               <th>Language</th>
-              <th>Number of stars</th>
-              <th>Last updated date</th>
-              <th>Owner's username</th>
-              <th>URL to repository</th>
+              <th>Stars</th>
+              <th>Updated Date</th>
+              <th>Username</th>
+              <th>URL</th>
             </tr>
-            <tr *cdkVirtualFor="let result of data.query.results" class="h-[{{ itemSize }}px] gri">
+            <tr *cdkVirtualFor="let result of data.query.results" class="h-[{{ itemSize }}px] grid-tr">
               <td>{{result.name}}</td>
               <td>{{result.description}}</td>
               <td>{{result.language}}</td>
-              <td>{{result.stargazers_count}}</td>
-              <td>{{result.updated_at}}</td>
+              <td>{{result.stargazers_count }}</td>
+              <td>{{result.updated_at | date}}</td>
               <td>{{result.owner.login}}</td>
               <td>{{result.html_url}}</td>
             </tr>
